cabal-version:      3.6
name:               lab2-variant3
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             MoonNarga
maintainer:         moonnarga@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  BST

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base,
        mtl,
        hspec,
        containers,
        random,
        QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010
    GHC-Options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints

executable lab2-variant3
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        lab2-variant3

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test-unit
    type:       exitcode-stdio-1.0
    main-is:    Unit.hs
    
    build-depends: 
        base,
        lab2-variant3,
        hspec
        
    hs-source-dirs:   test
    default-language: Haskell2010

Test-Suite test-PBT
    type:       exitcode-stdio-1.0
    main-is:    PBT.hs
    
    build-depends: 
        base,
        containers,
        random,
        lab2-variant3,
        QuickCheck
        
    hs-source-dirs:   test
    default-language: Haskell2010